# GloriousProtonManager

./: .gitignore  .requirements.txt.swp  README.md  glorious_proton_manager.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: gpm.py
src/GloriousProtonManager/: __init__.py  __main__.py  api.py  constants.py  functions.py  gpm.py  interface.py  settings.py
src/GloriousProtonManager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
