[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GloriousProtonManager"
version = "0.0.4"
authors = [
  { name="Loco Motion", email="thelocomotionnn@gmail.com" },
]
description = "Manage GE-Proton installation, removal and more"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/GloriousProtonManager"
"Bug Tracker" = "https://github.com/pypa/GloriousProtonManager/issues"
