[build-system]
requires = [
	"setuptools>=61.0",
	"certifi>=2022.6.15",
        "charset-normalizer>=2.1.0",
        "idna>=3.3",
        "PySimpleGUI>=4.60.1",
        "requests>=2.28.1",
        "urllib3>=1.26.9"
]
build-backend = "setuptools.build_meta"

[project]
name = "GloriousProtonManager"
version = "0.0.8"
authors = [
  { name="Loco Motion", email="thelocomotionnn@gmail.com" },
]
description = "Manage GE-Proton installation, removal and more"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thelocomotion/GloriousProtonManager"
"Bug Tracker" = "https://github.com/thelocomotion/GloriousProtonManager/issues"
